# theograd

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
graditude/: build.zig
graditude/src/: error.zig  main.zig  tensor.zig
python/: main.py  pyproject.toml
python/nbs/: rnn.ipynb
python/nbs/detours/: tanh.ipynb
python/src/rwvk_n_roll/shared/: dataloader.py  utils.py
python/src/rwvk_n_roll/stg2/: model.py  scratch.py  train.py
src/rwvk_n_roll/stg1/: generate.py  model.py  train.py
src/rwvk_n_roll/stg2/: model.py
stg1/: dataloader.py  generate.py  model.py  scratch.py  train.py  utils.py
theograd/: build.zig  build.zig.zon
theograd/src/: main.zig  tensor.zig
