[project]
name = "rwkv-n-roll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pydantic>=2.13.2",
    "torch>=2.11.0",
]
